Updated syntax of various commands Aside from better syntax, found a bug when using the plot_style vectors. Also added the new parser files. 	modified:   grammar.js 	modified:   package.json 	modified:   src/node-types.json 	modified:   src/parser.c

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "tree-sitter-gnuplot",
   "version": "1.0.0",
-  "description": "tree sitter support for gnuplot",
+  "description": "Gnuplot grammar for tree-sitter",
   "main": "bindings/node",
+  "keywords": [
+    "parser",
+    "lexer"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +17,17 @@
   },
   "devDependencies": {
     "tree-sitter-cli": "^0.20.7"
-  }
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.gnuplot",
+      "file-types": [
+        "gnuplot",
+        "gp",
+        "plt",
+        "plot",
+        "gnu"
+      ]
+    }
+  ]
 }
